# rules_typescript

./: package.json
internal/: build_defs.bzl
internal/annex/: BUILD.bazel  fake_runtime.bzl  runtime.bzl  ts_library.bzl
internal/annex/test/: BUILD.bazel  foo.ts  test.ts
internal/common/: compilation.bzl  module_mappings.bzl  tsconfig.bzl
internal/tsc_wrapped/: compiler_host.ts  tsc_wrapped.ts  tsconfig.ts
